syntax = "proto3";

package slog;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/picatz/slogproto;slogproto";

enum Level {
  LEVEL_UNSPECIFIED = 0;
  LEVEL_INFO = 1;
  LEVEL_WARN = 2;
  LEVEL_ERROR = 3;
  LEVEL_DEBUG = 4;
}

message Value {
  message Group {
    map<string, Value> attrs = 1;
  }
  oneof kind {
    bool bool = 1;
    double float = 2;
    int64 int = 3;
    string string = 4;
    google.protobuf.Timestamp time = 5;
    google.protobuf.Duration duration = 6;
    uint64 uint = 7;
    Group group = 8;
    google.protobuf.Any any = 9;
  }
}

message Record {
  google.protobuf.Timestamp time = 1;
  string message = 2;
  Level level = 3;
  map<string, Value> attrs = 4;
}
